force-app/main/default/objects/Company_Dynamics__c/Company_Dynamics__c.object-meta.xml
<CustomObject>
    <label>Company Dynamics</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Company Dynamics Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>