force-app/main/default/objects/Company_Dynamics__c/fields/Company_Dynamics__c.field-meta.xml
<CustomField>
    <fullName>Company_Dynamics__c</fullName>
    <label>Company Dynamics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>