force-app/main/default/objects/Company_Dynamics__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Company Dynamics</relationshipLabel>
    <relationshipName>Company_Dynamics</relationshipName>
    <type>Lookup</type>
</CustomField>