force-app/main/default/objects/Company_Dynamics__c/fields/Market_Dynamics__c.field-meta.xml
<CustomField>
    <fullName>Market_Dynamics__c</fullName>
    <label>Market Dynamics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>