force-app/main/default/objects/Company_Dynamics__c/fields/Product_Dynamics__c.field-meta.xml
<CustomField>
    <fullName>Product_Dynamics__c</fullName>
    <label>Product Dynamics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>