force-app/main/default/objects/Company_Dynamics__c/fields/Staff_Dynamics__c.field-meta.xml
<CustomField>
    <fullName>Staff_Dynamics__c</fullName>
    <label>Staff Dynamics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>